--- a/publicacionesPanel - copia/index.html
+++ b/publicacionesPanel - copia/index.html
@@ -51,7 +51,7 @@
                                     <h1> Nueva Publiacion</h1>
 
                                 </div>
-                                <form action="#">
+                               <div class="formularioContainer" >
                                     <div class=" row filas">
                                         <div class=" form-group  col-md-6">
                                             <label for="autor"> Autor
@@ -70,7 +70,7 @@
                                             <label for="img">Imagen
                                                 <span>*</span>
                                             </label>
-                                            <div class="container imgd" v-for="imagen in imagenes" accept="image/*">
+                                            <div class="container imgd" v-for="imagen in imagenes">
 
 
                                                 <img v-bind:src="imagen.img" class=" imgs rounded my-4 imagen" style="width:35%;">
@@ -82,7 +82,7 @@
                                             </div>
                                             <!-- <input class="form-control" type="text" accept="image/*" v-model="imagenes"> -->
 
-                                            <input class="form-control" type="file" accept="image/*" onchange="encodeImageFileAsURL(this)">
+                                            <input class="form-control" type="file" accept="image/*" @change="encodeImageFileAsURL">
                                         </div>
 
                                         <div class="form-group col-md-12">
@@ -95,7 +95,7 @@
 
                                     <button type="submit" class="btnAGG" @click="agregar">Agregar</button>
                                     <button type="reset" class="btnClose" data-dismiss="modal">Cancelar</button>
-                                </form>
+                                </div> 
                             </div>
 
                         </div>
@@ -119,7 +119,7 @@
                             <div class="headerForm">
                                 <h1> Modificar Publiacion</h1>
                             </div>
-                            <form action="#">
+                            <div class="formularioContainer">
                                 <div class=" row filas">
                                     <div class=" form-group  col-md-6">
                                         <label for="autor"> Autor
@@ -154,7 +154,7 @@
                                 </div>
                                 <button class="submit btnMODI" type="submit"  @click="modificar(items.id)" data-dismiss="modal">Modificar</button>
                                 <button type="reset" class="btnClose" data-dismiss="modal">Cancelar</button>
-                            </form>
+                            </div>
                         </div>
 
                     </div>
@@ -201,7 +201,7 @@
 
                         </td>
                         <td data-label="Editar" class="editar">
-                            <a href="">
+                            <!-- <a href="">
                                    Vista <i class="fas fa-eye"></i>
                             </a>
                             <a href="" @click="elimina(item.id)">
@@ -209,8 +209,8 @@
                             </a>
                             <a href=""  data-toggle="modal" data-target="#MODIPublic" @click="actualizar(item)">
                                  Modificar   <i class="fas fa-edit"></i>
-                            </a>
-                            <!-- <button class="btn btn-invoice">
+                            </a> -->
+                            <button class="btn btn-invoice">
                                     <i class="fas fa-eye"></i>
                             </button>
                             <button class="btn btn-invoice" @click="elimina(item.id)">
@@ -218,7 +218,7 @@
                             </button>
                             <button class="btn btn-invoice" data-toggle="modal" data-target="#MODIPublic" @click="actualizar(item)">
                                 <i class="fas fa-edit"></i>
-                            </button> -->
+                            </button>
                         </td>
                     </tr>
 
